Use imgui. Update shader. Remove OSC / OpenCV.

--- a/vc2013/Live4D.vcxproj.filters
+++ b/vc2013/Live4D.vcxproj.filters
@@ -16,11 +16,14 @@
     <Filter Include="Blocks">
       <UniqueIdentifier>{7BF91F5E-B459-4C4F-AAC6-DBB635B0C795}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Blocks\OSC">
-      <UniqueIdentifier>{EA77E63B-E67C-4FB8-AE98-0E374EFFD3D7}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Blocks\VNM">
       <UniqueIdentifier>{c2556b12-30fc-4505-b3a9-9c09e412ff3d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Blocks\imgui">
+      <UniqueIdentifier>{8e5e1d14-38a8-4e44-916e-77ea12226a76}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Blocks\imgui\lib">
+      <UniqueIdentifier>{0179a3cc-f5d3-44a9-9c4a-5ed64a881b88}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -33,11 +36,20 @@
     <ClCompile Include="..\..\Cinder\blocks\Cinder-VNM\src\MiniConfig.cpp">
       <Filter>Blocks\VNM</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\Cinder\blocks\OSC\src\cinder\osc\Osc.cpp">
-      <Filter>Blocks\OSC</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\Cinder\blocks\Cinder-VNM\src\AssetManager.cpp">
       <Filter>Blocks\VNM</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Cinder\blocks\Cinder-ImGui\src\CinderImGui.cpp">
+      <Filter>Blocks\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Cinder\blocks\Cinder-ImGui\lib\imgui\imgui.cpp">
+      <Filter>Blocks\imgui\lib</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Cinder\blocks\Cinder-ImGui\lib\imgui\imgui_demo.cpp">
+      <Filter>Blocks\imgui\lib</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Cinder\blocks\Cinder-ImGui\lib\imgui\imgui_draw.cpp">
+      <Filter>Blocks\imgui\lib</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -50,14 +62,29 @@
     <ClInclude Include="..\..\Cinder\blocks\Cinder-VNM\include\MiniConfig.h">
       <Filter>Blocks\VNM</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\Cinder\blocks\OSC\src\cinder\osc\Osc.h">
-      <Filter>Blocks\OSC</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\BlobTracker.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\Cinder\blocks\Cinder-VNM\include\AssetManager.h">
       <Filter>Blocks\VNM</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Cinder\blocks\Cinder-ImGui\include\CinderImGui.h">
+      <Filter>Blocks\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Cinder\blocks\Cinder-ImGui\lib\imgui\imconfig.h">
+      <Filter>Blocks\imgui\lib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Cinder\blocks\Cinder-ImGui\lib\imgui\imgui.h">
+      <Filter>Blocks\imgui\lib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Cinder\blocks\Cinder-ImGui\lib\imgui\imgui_internal.h">
+      <Filter>Blocks\imgui\lib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Cinder\blocks\Cinder-ImGui\lib\imgui\stb_rect_pack.h">
+      <Filter>Blocks\imgui\lib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Cinder\blocks\Cinder-ImGui\lib\imgui\stb_textedit.h">
+      <Filter>Blocks\imgui\lib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Cinder\blocks\Cinder-ImGui\lib\imgui\stb_truetype.h">
+      <Filter>Blocks\imgui\lib</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -76,6 +103,12 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="..\README.md" />
+    <None Include="..\..\Cinder\blocks\Cinder-ImGui\lib\imgui\LICENSE">
+      <Filter>Blocks\imgui\lib</Filter>
+    </None>
+    <None Include="..\..\Cinder\blocks\Cinder-ImGui\lib\imgui\README.md">
+      <Filter>Blocks\imgui\lib</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Xml Include="..\assets\MiniConfig.xml">
